Added alternative text in image

--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
     <div class="main">
         <div class="box box1">
             <div class="author-div">
-                <img src="author1.jpg">
+                <img src="author1.jpg" alt="author-img">
                 <div>
                     <h5>Daniel Clifford</h5>
                     <h6>Verified Graduate</h6>
@@ -24,7 +24,7 @@
         </div>
         <div class="box box2">
             <div class="author-div">
-                <img src="author1.jpg">
+                <img src="author1.jpg" alt="author-img">
                 <div>
                     <h5>Daniel Clifford</h5>
                     <h6>Verified Graduate</h6>
@@ -37,7 +37,7 @@
         </div>
         <div class="box box3">
             <div class="author-div">
-                <img src="author1.jpg">
+                <img src="author1.jpg" alt="author-img">
                 <div>
                     <h5>Daniel Clifford</h5>
                     <h6>Verified Graduate</h6>
@@ -50,7 +50,7 @@
         </div>
         <div class="box box4">
             <div class="author-div">
-                <img src="author1.jpg">
+                <img src="author1.jpg" alt="author-img">
                 <div>
                     <h5>Daniel Clifford</h5>
                     <h6>Verified Graduate</h6>
@@ -63,7 +63,7 @@
         </div>
         <div class="box box5">
             <div class="author-div">
-                <img src="author1.jpg">
+                <img src="author1.jpg" alt="author-img">
                 <div>
                     <h5>Daniel Clifford</h5>
                     <h6>Verified Graduate</h6>
